Fix editor plugin and add types

--- a/addons/mpf-gmc/plugin.cfg
+++ b/addons/mpf-gmc/plugin.cfg
@@ -4,4 +4,4 @@ name="Godot MC"
 description="A Media Controller for the Mission Pinball Framework (MPF)"
 author="Anthony van Winkle"
 version="0.0.1"
-script="mpf_gmc.gd"
+script="mpf_gmc_editor.gd"
