--- a/addons/mpf-gmc/plugin.cfg
+++ b/addons/mpf-gmc/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Godot MC"
 description="A Media Controller for the Mission Pinball Framework (MPF)"
-author="Anthony van Winkle"
-version="0.0.1"
+author="Mission Pinball Framework"
+version="0.1.0"
 script="mpf_gmc_editor.gd"
